--- a/.github/workflow/publish.yaml
+++ b/.github/workflow/publish.yaml
@@ -27,10 +27,11 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload to Chrome Web Store
-        uses: PlasmoHQ/chrome-upload-action@v2
+        uses: mnao305/chrome-extension-upload@v5.0.0
         with:
-          extension-id: ${{ secrets.CHROME_EXTENSION_ID }}
-          client-id: ${{ secrets.CHROME_CLIENT_ID }}
-          client-secret: ${{ secrets.CHROME_CLIENT_SECRET }}
-          refresh-token: ${{ secrets.CHROME_REFRESH_TOKEN }}
-          zip-path: "./siteblocker-${{ github.event.inputs.prerelease_tag }}.zip"
+          file-path: dist/file.zip
+          extension-id: ${{ secrets.EXTENSION_ID }}
+          client-id: ${{ secrets.CLIENT_ID }}
+          client-secret: ${{ secrets.CLIENT_SECRET }}
+          refresh-token: ${{ secrets.REFRESH_TOKEN }}
+          file-path: "./siteblocker-${{ github.event.inputs.prerelease_tag }}.zip"
