--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "PomoBlock",
   "description": "Block access to distracting websites and stay focused on what matters most.",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "permissions": [
     "storage",
     "tabs",
@@ -23,29 +23,21 @@
       "128": "icons/icon128.png"
     },
     "default_title": "PomoBlock",
-    "default_popup": "popup/popup.html"
+    "default_popup": "popup.html"
   },
-  "options_page": "options/options.html",
+  "options_page": "options.html",
   "content_scripts": [
     {
-      "matches": [
-        "<all_urls>"
-      ],
-      "js": [
-        "contentScript.js"
-      ],
+      "matches": ["<all_urls>"],
+      "js": ["js/content.bundle.js"],
       "run_at": "document_start",
       "all_frames": false
     }
   ],
   "web_accessible_resources": [
     {
-      "resources": [
-        "icons/*"
-      ],
-      "matches": [
-        "<all_urls>"
-      ]
+      "resources": ["icons/*"],
+      "matches": ["<all_urls>"]
     }
   ],
   "content_security_policy": {
