--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,15 @@
 {
   "manifest_version": 3,
   "name": "PomoBlock",
-  "description": "Block access to distracting websites and stay focused on what matters most.",
-  "version": "0.0.5",
+  "description": "Block access to distracting websites and stay focused with an integrated pomodoro timer.",
+  "version": "0.0.6",
   "permissions": [
     "storage",
     "tabs",
     "activeTab",
-    "alarms"
+    "alarms",
+    "notifications",
+    "contextMenus"
   ],
   "host_permissions": [
     "<all_urls>"
@@ -23,7 +25,7 @@
       "48": "icons/icon48.png",
       "128": "icons/icon128.png"
     },
-    "default_title": "PomoBlock - Website Blocker",
+    "default_title": "PomoBlock - Website Blocker & Pomodoro Timer",
     "default_popup": "popup.html"
   },
   "options_page": "options.html",
@@ -49,7 +51,8 @@
       "resources": [
         "icons/*",
         "*.css",
-        "*.js"
+        "*.js",
+        "history.html"
       ],
       "matches": [
         "<all_urls>"
