--- a/manifest.json
+++ b/manifest.json
@@ -50,6 +50,7 @@
         "icons/*",
         "*.css",
         "*.js",
+        "shared/*.css",
         "history.html"
       ],
       "matches": [
