--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rimraf dist",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --collectCoverage"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.268",
