--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,9 @@
       "@shared/*": ["shared/*"],
       "@popup/*": ["popup/*"],
       "@options/*": ["options/*"],
-      "@contentScript/*": ["contentScript/*"]
+      "@contentScript/*": ["contentScript/*"],
+      "@background/*": ["background/*"],
+      "@history/*": ["history/*"]
     }
   },
   "include": [
