Fix multiple audio bug

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
     "activeTab",
     "alarms",
     "notifications",
-    "contextMenus"
+    "contextMenus",
+    "offscreen"
   ],
   "host_permissions": [
     "<all_urls>"
